# simple-xapian

./: CMakeLists.txt  Makefile  MyContainer.cpp  MyContainer.h  MyXapian.cpp  MyXapian.h  README.md  simple-cffi.lisp  simple.cpp  simple.h
